# AoC

./: .gitignore  AoC.yml  AoC.yml.tmpl  LICENSE  go.mod  go.sum  main.go
2023/: requirements.txt  run.py  setup.cfg
2023/day1/: main.py
2023/utils/: aoc_input.py  geo.py
assets/: day.main.go.tmpl  day.main_test.go.tmpl
cmd/: bootstrap.go  clean.go  root.go
day5/: main.go  main_test.go
go/: go.mod  main_test.go
go/assets/: day.main_test.go.tmpl
go/cmd/: bootstrap.go  clean.go  const.go  root.go
go/internal/config/: config.go
go/internal/logging/: logging.go
go/internal/problems/: problems.go
internal/bootstrap/: bootstrap.go
internal/clean/: clean.go
pkg/bootstrap/: bootstrap.go
pkg/clean/: clean.go
rust/: Cargo.toml
rust/problems/y2022/d1/src/: main.rs
rust/problems/y2022/d10/src/: main.rs
rust/problems/y2022/d11/src/: main.rs
rust/problems/y2022/d12/: Cargo.toml
rust/problems/y2022/d12/src/: main.rs
rust/problems/y2022/d13/src/: main.rs
rust/problems/y2022/d14/src/: main.rs
rust/problems/y2022/d15/src/: main.rs
rust/problems/y2022/d16/: Cargo.toml
rust/problems/y2022/d16/src/: main.rs
rust/problems/y2022/d2/src/: main.rs
rust/problems/y2022/d3/src/: main.rs
rust/problems/y2022/d4/src/: main.rs
rust/problems/y2022/d5/src/: main.rs
rust/problems/y2022/d6/src/: main.rs
rust/problems/y2022/d7/src/: main.rs
rust/problems/y2022/d8/src/: main.rs
rust/problems/y2022/d9/src/: main.rs
rust/utils/: Cargo.toml
rust/utils/src/: debug.rs  graph.rs  lib.rs
y2021d5/: main.go  main_test.go
(+15 files in other folders)
