[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "problems/y2022/d1",
  "problems/y2022/d2",
  "problems/y2022/d3",
  "problems/y2022/d4",
  "problems/y2022/d5",
  "problems/y2022/d6",
  "problems/y2022/d7",
  "problems/y2022/d8",
  "problems/y2022/d9",
  "problems/y2022/d10",
  "problems/y2022/d11",
  "problems/y2022/d12",
  "problems/y2022/d13",
  "problems/y2022/d14",
  "problems/y2022/d15",
  "problems/y2022/d16",
  "problems/y2022/d17",
  "problems/y2022/d18",
  "problems/y2022/d19",
  "problems/y2022/d20",
  "problems/y2022/d21",
  "problems/y2022/d22",
  "problems/y2022/d23",
  "problems/y2022/d24",
  "problems/y2022/d25",
]

[dependencies]
